--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -45,7 +45,7 @@ jdbc:
   pool:
 #  
 #    # 初始化连接数
-   init: 1
+    init: 1
 #    # 最小连接数
     minIdle: 3
 #    # 最大连接数
@@ -62,13 +62,13 @@ jdbc:
 #    timeBetweenEvictionRunsMillis: 60000
 #    
 #    # 一个连接在池中最小空闲的时间，单位毫秒（20分钟）（4.0.6+）
-    minEvictableIdleTimeMillis: 1200000
+#    minEvictableIdleTimeMillis: 1200000
 #    # 一个连接在池中最大空闲的时间，单位毫秒（30分钟）（4.1.2+）
-    maxEvictableIdleTimeMillis: 1800000
+#    maxEvictableIdleTimeMillis: 1800000
 #    
 #    # 是否自动回收泄露的连接和超时时间，单位秒（35分钟）（4.0.6+）
-    removeAbandoned: true
-    removeAbandonedTimeout: 2100
+#    removeAbandoned: true
+#    removeAbandonedTimeout: 2100
 #
 #    # Oracle 下会自动开启 PSCache，并指定每个连接上 PSCache 大小。若不指定，则与 maxActive 相同（4.1.5+）
 #    maxPoolPreparedStatementPerConnectionSize: ~
@@ -291,8 +291,8 @@ logging:
 #  enabled: true
 
 # 系统监控
-#state:
-#  enabled: true
+state:
+  enabled: false
 
 #======================================#
 #========= Framework settings =========#
@@ -410,9 +410,8 @@ logging:
 #      delaySeconds: 60
 #      sleepSeconds: 3
 #      mappingPath: mappings
-  
 # Web 相关
-#web:
+web:
 #  
 #  # MVC 视图相关
 #  view:
@@ -423,11 +422,11 @@ logging:
 #    themeName: default
 #
 #  # MVC 拦截器
-#  interceptor:
+  interceptor:
 #    
 #    # 后台管理日志记录拦截器
-#    log:
-#      enabled: true
+    log:
+      enabled: false
 #      addPathPatterns: >
 #        ${adminPath}/**
 #      excludePathPatterns: >
