--- a/src/main/resources/config/beetl.properties
+++ b/src/main/resources/config/beetl.properties
@@ -15,7 +15,7 @@
 #FT.dateFormat =  org.beetl.ext.format.DateFormat
 
 ##内置的默认格式化函数
-#FTC.java.util.Date = org.beetl.ext.format.DateFormat
+#FTC.java.utils.Date = org.beetl.ext.format.DateFormat
 
 ## 标签类
 #TAG.include= org.beetl.ext.tag.IncludeTag
