--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -55,20 +55,20 @@ jdbc:
     maxWait: 60000
 #    
 #    # 从池中取出连接前进行检验，如果检验失败，则从池中去除连接并尝试取出另一个（4.0.6+）
-#    testOnBorrow: false
-#    testOnReturn: false
+    testOnBorrow: false
+    testOnReturn: false
 #    
 #    # 间隔多久才进行一次检测，检测需要关闭的空闲连接，单位毫秒（1分钟）（4.0.6+）
-#    timeBetweenEvictionRunsMillis: 60000
+    timeBetweenEvictionRunsMillis: 60000
 #    
 #    # 一个连接在池中最小空闲的时间，单位毫秒（20分钟）（4.0.6+）
-#    minEvictableIdleTimeMillis: 1200000
+    minEvictableIdleTimeMillis: 1200000
 #    # 一个连接在池中最大空闲的时间，单位毫秒（30分钟）（4.1.2+）
-#    maxEvictableIdleTimeMillis: 1800000
+    maxEvictableIdleTimeMillis: 1800000
 #    
 #    # 是否自动回收泄露的连接和超时时间，单位秒（35分钟）（4.0.6+）
-#    removeAbandoned: true
-#    removeAbandonedTimeout: 2100
+    removeAbandoned: true
+    removeAbandonedTimeout: 2100
 #
 #    # Oracle 下会自动开启 PSCache，并指定每个连接上 PSCache 大小。若不指定，则与 maxActive 相同（4.1.5+）
 #    maxPoolPreparedStatementPerConnectionSize: ~
