--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/test-core-1.0.jar</systemPath>
 		</dependency> -->
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>easyexcel</artifactId>
+			<version>1.0.0-RELEASE</version>
+		</dependency>
 		
 	</dependencies>
 	
