--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -4,12 +4,12 @@
 #======================================#
 
 # 产品或项目名称、软件开发公司名称
-productName: JeeSite Demo
-companyName: ThinkGem
+productName: 车辆检测管理系统
+companyName: 检车场
 
 # 产品版本、版权年份
-productVersion: V4.1
-copyrightYear: 2018
+productVersion: V1.0
+copyrightYear: 2019
 
 #是否演示模式
 demoMode: false
@@ -36,7 +36,7 @@ jdbc:
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.jdbc.Driver
-  url: jdbc:mysql://127.0.0.1:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+  url: jdbc:mysql://148.70.133.170:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
   username: root
   password: 123456
   testSql: SELECT 1
@@ -115,7 +115,7 @@ spring:
   
   # 应用程序名称
   application:
-    name: jeesite-web
+    name: car-check-web
     
   # 当前环境名称（注意：不可设置为 test 它是单元测试专用的名称）
   profiles:    
