--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -37,8 +37,8 @@ jdbc:
   type: mysql
   driver: com.mysql.jdbc.Driver
   url: jdbc:mysql://148.70.133.170:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-  username: root
-  password: 123456
+  username: jeesite
+  password: jeesite
   testSql: SELECT 1
 
 #  # 数据库连接池配置
