主页去掉官网链接

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -31,8 +31,8 @@ server:
 #======================================#
 
 # 数据库连接
-jdbc: 
-  
+jdbc:
+
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.jdbc.Driver
@@ -449,13 +449,13 @@ web:
 #      excludePathPatterns: ~
 #        
 #  # 静态文件后缀，过滤静态文件，以提高访问性能。
-#  staticFile: .css,.js,.map,.png,.jpg,.gif,.jpeg,.bmp,.ico,.swf,.psd,.htc,.crx,.xpi,.exe,.ipa,.apk,.otf,.eot,.svg,.ttf,.woff,.woff2
+  staticFile: .css,.js,.map,.png,.jpg,.gif,.jpeg,.bmp,.ico,.swf,.psd,.htc,.crx,.xpi,.exe,.ipa,.apk,.otf,.eot,.svg,.ttf,.woff,.woff2
 #  
 #  # 静态文件后缀，排除的url路径，指定哪些uri路径不进行静态文件过滤。
-#  staticFileExcludeUri: /druid/
+  staticFileExcludeUri: /druid/
 #  
 #  # 静态资源路径前缀，可做CDN加速优化
-#  staticPrefix: /static
+  staticPrefix: /static
 #  
 #  # 严格模式（更严格的数据安全验证）
 #  strictMode: false
