--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -36,7 +36,7 @@ jdbc:
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.jdbc.Driver
-  url: jdbc:mysql://148.70.133.170:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+  url: jdbc:mysql://localhost:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
   username: jeesite
   password: jeesite
   testSql: SELECT 1
