--- a/pom.xml
+++ b/pom.xml
@@ -81,9 +81,9 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>easyexcel</artifactId>
-			<version>1.0.0-RELEASE</version>
+			<version>1.1.2-beta5</version>
 		</dependency>
-		
+
 	</dependencies>
 	
 	<build>
