--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -36,9 +36,9 @@ jdbc:
   # Mysql 数据库配置
   type: mysql
   driver: com.mysql.jdbc.Driver
-  url: jdbc:mysql://localhost:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-  username: jeesite
-  password: jeesite
+  url: jdbc:mysql://123.57.225.141:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+  username: root
+  password: Qwer1234!
   testSql: SELECT 1
 
 #  # 数据库连接池配置
