feat: 申请单样式调整

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -564,3 +564,5 @@ web:
 #======================================#
 #========== Project settings ==========#
 #======================================#
+
+localplate: 冀R
