--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -38,7 +38,7 @@ jdbc:
   driver: com.mysql.jdbc.Driver
   url: jdbc:mysql://123.57.225.141:3306/jeesite?useSSL=false&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
   username: root
-  password: Qwer1234!
+  password: Qwer123456.
   testSql: SELECT 1
 
 #  # 数据库连接池配置
